--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-OUTPUT_FILES_PATH="C:\\Users\\Vinicius\\Desktop\\dados_rfb\\data\\output_files"
-EXTRACTED_FILES_PATH="C:\\Users\\Vinicius\\Desktop\\dados_rfb\\data\\extracted_files"
+OUTPUT_FILES_PATH="C:\\Users\\Vinicius\\Desktop\\dados_rfb_full_etl\\data\\output_files"
+EXTRACTED_FILES_PATH="C:\\Users\\Vinicius\\Desktop\\dados_rfb_full_etl\\data\\extracted_files"
 DB_HOST=localhost
 DB_PORT=5432
 DB_USER=postgres
